@@ -3,21 +3,22 @@
 
 package io.clientcore.core.http.models;
 
-import io.clientcore.core.util.binarydata.BinaryData;
+import io.clientcore.core.models.binarydata.BinaryData;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 public class PagedResponseTests {
 
     @Test
     public void testPagedResponseRequired() {
-        final HttpRequest mockHttpRequest = new HttpRequest(HttpMethod.GET, "https://endpoint");
+        final HttpRequest mockHttpRequest = new HttpRequest().setMethod(HttpMethod.GET).setUri("https://endpoint");
         final int statusCode = 200;
         final HttpHeaders mockHttpHeaders = new HttpHeaders();
-        final List<Object> mockValue = List.of(new Object());
+        final List<Object> mockValue = Collections.singletonList(new Object());
 
         final String continuationToken = "continuation_token";
         final String nextLink = "https://next_link";
